@@ -319,12 +319,9 @@ bool OSystem_IPHONE::handleEvent_mouseSecondDragged(Common::Event &event, int x,
 
 		if (absX < kMaxDeviation && vecY >= kNeededLength) {
 			// Swipe down
-			event.type = Common::EVENT_KEYDOWN;
-			_queuedInputEvent.type = Common::EVENT_KEYUP;
+			event.type = Common::EVENT_MAINMENU;
+			_queuedInputEvent.type = Common::EVENT_INVALID;
 
-			event.kbd.flags = _queuedInputEvent.kbd.flags = 0;
-			event.kbd.keycode = _queuedInputEvent.kbd.keycode = Common::KEYCODE_F5;
-			event.kbd.ascii = _queuedInputEvent.kbd.ascii = Common::ASCII_F5;
 			_queuedEventTime = getMillis() + kQueuedInputEventDelay;
 			return true;
 		}
